# test-github-workflows

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  tox.ini  writer.py
.github/workflows/: _prep-release.yaml  _update-dependencies.yaml  build-python-package.jinja.yaml  build-python-package.yaml  create-pr.jinja.yaml  create-pr.yaml  create-tag-and-release.jinja.yaml  create-tag-and-release.yaml  demo.jinja.yaml  test-build.yaml  (+10 more)
changelog.d/: 20240510_071841_kurtmckee_fix_tox_environments.rst  20240903_204323_kurtmckee_single_job_tox_workflow.rst  20240903_212521_kurtmckee_flatten_configuration.rst  20240909_105636_kurtmckee_fix_caching.rst  20240909_113839_kurtmckee_fix_typo.rst  20241102_161110_kurtmckee_use_tox_uv.rst  20241104_064842_kurtmckee_enumerate_pythons.rst  20241104_175742_kurtmckee_enumerate_pythons.rst  20241105_065725_kurtmckee_enumerate_pythons.rst  20241105_154722_kurtmckee_remove_unnecessary_write.rst  20250127_201831_kurtmckee_auto_prs.rst  20250128_063816_kurtmckee_fixes.rst  20250129_092146_kurtmckee_fix_pr_base.rst  20250129_194801_kurtmckee_open_draft_prs.rst  20250327_083655_kurtmckee_pr_body.rst  20251001_074358_kurtmckee_updates.rst  20251001_075608_kurtmckee_updates.rst  20251001_081717_kurtmckee_updates.rst  20251002_080559_kurtmckee_skip_environments.rst  20251002_160806_kurtmckee_tox_docs.rst  20251002_161759_kurtmckee_add_ci.rst  20251003_093013_kurtmckee_best_practice.rst  20251121_152300_kurtmckee_create_tox_envs_in_parallel.rst  20251124_165558_kurtmckee_add_tox_gh_plugin.rst  20251125_084347_kurtmckee_uv_for_venv_creation.rst  20251125_114355_kurtmckee_update_check_jsonschema.rst  20251130_075212_kurtmckee_fix_env_pre_creation.rst  20260105_142250_kurtmckee_updates.rst  20260105_143204_kurtmckee_updates.rst  20260105_144453_kurtmckee_updates.rst  20260109_084740_kurtmckee_job_timeout_minutes.rst  20260201_164344_kurtmckee_build_packages_for_publication.rst  20260224_140826_kurtmckee_jinja_templates.rst  README.rst
docs/: build-python-package.rst  create-pr.rst  create-tag-and-release.rst  tox.rst
requirements/: README.rst
src/: cogger.py  create-pr-schema.json  create_commit_request_body.py  render-templates.py  sync_code.py  tox-config-transformer.py  tox-config-writer.py  tox-schema.json  tox_config_transformer.py  update-pre-commit-additional-dependencies.py
tests/: conftest.py  test_create_commit_request_body.py  test_tox_config_transformer.py  test_tox_schema.py
(+24 files in other folders)
