[project]
name = "github-workflows"
version = "1.4"


# flake8
# ------

[tool.flake8]
max-line-length = 80
extend-select = ["B950"]
extend-ignore = ["E203", "E501", "E701"]


# pytest
# ------

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = [
    "Breaking changes",
    "Python support",
    "Added",
    "Removed",
    "Changed",
    "Fixed",
    "Development",
]
