[project]
name = "github-workflows"
version = "1.7"


# chipshot
# --------

[tool.chipshot]
template = """
This file is a part of Kurt McKee's GitHub Workflows project.
https://github.com/kurtmckee/github-workflows
Copyright 2024-{{ year }} Kurt McKee <contactme@kurtmckee.org>
SPDX-License-Identifier: MIT
"""


# flake8
# ------

[tool.flake8]
max-line-length = 80
extend-select = ["B950"]
extend-ignore = ["E203", "E501", "E701"]


# mypy
# ----

[tool.mypy]
files = "src/"
strict = true
sqlite_cache = true


# pytest
# ------

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = [
    "Breaking changes",
    "Python support",
    "Added",
    "Removed",
    "Changed",
    "Fixed",
    "Documentation",
    "Development",
]
